# sinch-sdk-python-quickstart

./: .gitignore  README.md  config.ini  setup.py
getting_started/verification/user-verification-using-sms-pin/: app.py
getting_started/voice/handle_incoming_call/: app.py
getting_started/voice/make_a_call/: app.py
templates/client/: .env  README.md  app.py  pyproject.toml
templates/client/src/: app.py  sinch_client_helper.py
templates/client/src/numbers_api/: numbers_quickstart.py  snippet.py
templates/server/: .env  README.md  pyproject.toml
templates/server/src/: server.py  sinch_client_helper.py
templates/server/src/numbers_api/: controller.py  server_business_logic.py
templates/utils/: __init__.py  sinch_client_helper.py
tutorials/voice/qualify-leads-app/: README.md
